--- a/build.xml
+++ b/build.xml
@@ -2,11 +2,11 @@
 <project default="build">
 
 <!-- APPLICATION METADATA -->
-<property name="mdpc.name"      value="liblz4-ada-dev"/>
-<property name="mdpc.section"   value="libdevel"/>
+<property name="mdpc.name"    value="liblz4-ada-dev"/>
+<property name="mdpc.section" value="libdevel"/>
 <!-- currently restricted due to install path x86_64-linux-gnu -->
-<property name="mdpc.arch"      value="amd64"/>
-<property name="mdpc.descrs"    value="LZ4 Decompression Library implemented in Ada"/>
+<property name="mdpc.arch"    value="amd64"/>
+<property name="mdpc.descrs"  value="LZ4 Decompression Library for Ada"/>
 <property name="mdpc.descrl">
  WORK IN PROGRESS
 </property>
@@ -17,6 +17,7 @@ lib/lz4ada.ali /usr/lib/x86_64-linux-gnu/ada/adalib/lz4
 lib/lz4ada.ads /usr/share/ada/adainclude/lz4
 tool_unlz4ada/unlz4ada /usr/bin
 tool_xxhash32ada/xxhash32ada /usr/bin
+tool_lz4hdrinfo/lz4hdrinfo /usr/bin
 </property>
 
 <!-- CI INTEGRATION -->
