Replace tool_unlz4ada_singleframe by a new tool_unlz4ada_simple that actually deserves to be called simple. The new simple tool has greater capabilities than its predecessor. Specifically, the API no longer limits it to decoding a single frame although the necessary changes are not implemented in the library just yet.

--- a/tool_unlz4ada_simple/build.xml
+++ b/tool_unlz4ada_simple/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project default="build">
 
-<property name="masysma.target" value="unlz4ada_singleframe"/> 
+<property name="masysma.target" value="unlz4ada_simple"/> 
 <dirname property="local.root" file="${ant.file}"/>
 <property name="masysma.ada.compile.1" value="-I${local.root}/../lib"/>
 <property name="masysma.ada.compile.8" value="-largs"/>
