Reset end mark upon detecing begin of new frame. This fixes the previously failing test case. Cover all reachable code lines (548/550) by test cases. This reveals a newly failing test case. It is again the concat390 test, but it now _only_ fails when its data is supplied to the library in one-byte-increments. Analyzing...

--- a/build.xml
+++ b/build.xml
@@ -16,6 +16,7 @@ lib/liblz4ada.so /usr/lib/x86_64-linux-gnu
 lib/lz4ada.ali /usr/lib/x86_64-linux-gnu/ada/adalib/lz4
 lib/lz4ada.ads /usr/share/ada/adainclude/lz4
 tool_unlz4ada/unlz4ada /usr/bin
+tool_unlz4ada_simple/unlz4ada_simple /usr/bin
 tool_xxhash32ada/xxhash32ada /usr/bin
 tool_lz4hdrinfo/lz4hdrinfo /usr/bin
 </property>
