Rename READMEx.md -> README.md. Complete MDPC 2.0 package by adding debian-changelog.txt and package description in build.xml

--- a/build.xml
+++ b/build.xml
@@ -6,9 +6,24 @@
 <property name="mdpc.section" value="libdevel"/>
 <!-- currently restricted due to install path x86_64-linux-gnu -->
 <property name="mdpc.arch"    value="amd64"/>
-<property name="mdpc.descrs"  value="LZ4 Decompression Library for Ada"/>
+<property name="mdpc.descrs"  value="Ada LZ4 Extractor Library"/>
 <property name="mdpc.descrl">
- WORK IN PROGRESS
+ This package provides an Ada implementation of an LZ4 Decompressor
+ as a shared library. This implementation only supports decompression!
+ .
+ * LZ4 Frame Format is supported according to specification v.1.6.3.
+ * Legacy Frame Format is supported.
+ * Skippable Frames are supported.
+ * Provided checksums are verified.
+ * Provided length information is verified.
+ * Concatenated frames can be decompressed.
+ * Big Endian architectures are UNSUPPORTED.
+ * Dictionaries are UNSUPPORTED.
+ .
+ Performance is slower compared to reference and C implementations:
+ The unlz4 C program is at least three times as fast. The Ada
+ implementation's performance may still sufficie for a range of
+ applications since it exceeds the 1000 MiB/s limit on modern systems.
 </property>
 
 <property name="mdpc.file.install">
