--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,28 @@
 <!-- currently restricted due to install path x86_64-linux-gnu -->
 <property name="mdpc.arch"    value="amd64"/>
 <property name="mdpc.descrs"  value="Ada LZ4 Extractor Library"/>
+<property name="mdpc.copyright.file"><![CDATA[
+Files: *
+Copyright: (c) 2022, 2023 Ma_Sys.ma <info@masysma.net>, (c) 2018 Stephan Brumme
+License: Expat
+ Permission is hereby granted, free of charge, to any person obtaining a copy
+ of this software and associated documentation files (the "Software"),
+ to deal in the Software without restriction, including without limitation
+ the rights to use, copy, modify, merge, publish, distribute, sublicense,
+ and/or sell copies of the Software, and to permit persons to whom the
+ Software is furnished to do so, subject to the following conditions:
+ .
+ The above copyright notice and this permission notice shall be included
+ in all copies or substantial portions of the Software.
+ .
+ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+ SOFTWARE.
+]]></property>
 <property name="mdpc.descrl">
  This package provides an Ada implementation of an LZ4 Decompressor
  as a shared library. This implementation only supports decompression!
